<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">foodiary</string>
    <string name="oldPassword">Eski Şifre</string>
    <string name="newPassword">Yeni Şifre</string>
    <string name="editProfile">PROFİLİ DÜZENLE</string>
    <string name="email2">iremiraycakir@gmail.com</string>
    <string name="name2">İsim</string>
    <string name="surname2">Soyad</string>
    <string name="save">Kaydet</string>
    <string name="foodiary">FooDiary</string>
    <string name="email">e-posta</string>
    <string name="password">şifre</string>
    <string name="login">giriş</string>
    <string name="register">üye ol</string>
    <string name="profile">PROFİL</string>
    <string name="email1">pelsinkaplan@gmail.com</string>
    <string name="name1">Ferihan</string>
    <string name="notifications">Bildirimler:</string>
    <string name="recipes">TARİFLER</string>
    <string name="recipe_button1_name">Tüm Yemek Tarifleri</string>
    <string name="recipe_button2_name">SKT Yaklaşanlarla Tarifler</string>
    <string name="recipe_button3_name">Stoktakilerle Tarifler</string>
    <string name="yemekler">YEMEKLER</string>
    <string name="çorbalar">ÇORBALAR</string>
    <string name="anayemekler">ANA YEMEKLER</string>
    <string name="pilavmakarna">PİLAVLAR/MAKARNALAR</string>
    <string name="salatalar">SALATALAR</string>
    <string name="tatlılar">TATLILAR</string>
    <string name="hamurişi">HAMUR İŞİ</string>

</resources>
