<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/oldPassword"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:layout_alignStart="@id/email"
        android:layout_alignTop="@id/email"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/gallery_thumb"
        android:hint="@string/oldPassword"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textColorHint="@android:color/primary_text_dark"
        android:textSize="13sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/newPassword"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:layout_alignStart="@id/email"
        android:layout_alignTop="@id/oldPassword"
        android:layout_marginTop="60dp"
        android:background="@android:drawable/gallery_thumb"
        android:hint="@string/newPassword"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textColorHint="@android:color/primary_text_dark"
        android:textSize="13sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:shadowColor="@android:color/holo_green_dark"
        android:text="@string/editProfile"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/holo_green_dark"
        android:textSize="28sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/menu"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/menu" />

    <Button
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignTop="@id/menu"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ppicon" />

    <TextView
        android:id="@+id/email"
        android:layout_width="336dp"
        android:layout_height="30dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="38dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:text="@string/email2"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_alignTop="@id/logo"
        android:layout_alignStart="@id/logo"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/gallery_thumb"
        android:hint="@string/name2"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textColorHint="@android:color/primary_text_dark"
        android:textSize="13sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_alignTop="@id/name"
        android:layout_alignStart="@id/logo"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/gallery_thumb"
        android:hint="@string/surname2"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textColorHint="@android:color/primary_text_dark"
        android:textSize="13sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/save"
        android:layout_width="66dp"
        android:layout_height="27dp"
        android:layout_alignTop="@id/newPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/save" />


</RelativeLayout>