<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img4"
    tools:context=".Panel.LoginPanel">

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:shadowColor="@android:color/holo_green_dark"
        android:text="@string/foodiary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/holo_green_dark"
        android:textSize="55sp"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="262dp"
        android:layout_height="139dp"
        android:layout_alignTop="@+id/editProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="49dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="334dp"
        android:layout_height="45dp"
        android:layout_below="@+id/editProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="11dp"
        android:background="@android:drawable/gallery_thumb"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/password"
        android:layout_width="334dp"
        android:layout_height="45dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="11dp"
        android:background="@android:drawable/gallery_thumb"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/login"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/register"
        android:layout_width="68dp"
        android:layout_height="33dp"
        android:layout_alignTop="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="145dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</RelativeLayout>