<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:showIn="@layout/recipe_category_app_bar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/yemekler"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/soups1"
        android:layout_width="155dp"
        android:layout_height="81dp"
        android:layout_alignTop="@id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/corbalar" />

    <Button
        android:id="@+id/soups2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/soups1"
        android:layout_alignTop="@+id/soups1"
        android:layout_marginStart="4dp"
        android:layout_marginTop="75dp"
        android:background="#5E5D5D"
        android:drawableStart="@drawable/ic_action_button"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableRight="@drawable/ic_action_button2"
        android:text="@string/çorbalar"
        android:textColor="@android:color/white"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/maincourse1"
        android:layout_width="155dp"
        android:layout_height="81dp"
        android:layout_alignStart="@+id/soups1"
        android:layout_alignTop="@id/soups2"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/anayemek" />

    <Button
        android:id="@+id/maincourse2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/soups2"
        android:layout_alignTop="@+id/maincourse1"
        android:layout_marginTop="75dp"
        android:background="#5E5D5D"
        android:drawableStart="@drawable/ic_action_button"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableRight="@drawable/ic_action_button2"
        android:text="@string/anayemekler"
        android:textColor="@android:color/white"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/ricepasta1"
        android:layout_width="155dp"
        android:layout_height="81dp"
        android:layout_alignStart="@+id/maincourse1"
        android:layout_alignTop="@id/maincourse2"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/pilavmakarna" />

    <Button
        android:id="@+id/ricepasta2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/maincourse2"
        android:layout_alignTop="@+id/ricepasta1"
        android:layout_marginTop="75dp"
        android:background="#5A5A5A"
        android:drawableStart="@drawable/ic_action_button"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableRight="@drawable/ic_action_button2"
        android:text="@string/pilavmakarna"
        android:textColor="@android:color/white"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/salads1"
        android:layout_width="155dp"
        android:layout_height="81dp"
        android:layout_alignTop="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/salatalar" />

    <Button
        android:id="@+id/salads2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/salads1"
        android:layout_alignEnd="@+id/salads1"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="4dp"
        android:background="#5E5D5D"
        android:drawableStart="@drawable/ic_action_button"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableRight="@drawable/ic_action_button2"
        android:text="@string/salatalar"
        android:textColor="@android:color/white"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/dessert1"
        android:layout_width="155dp"
        android:layout_height="81dp"
        android:layout_alignTop="@id/salads2"
        android:layout_alignEnd="@+id/salads1"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/tatlilar" />

    <Button
        android:id="@+id/dessert2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dessert1"
        android:layout_alignEnd="@+id/salads2"
        android:layout_marginTop="75dp"
        android:background="#5E5D5D"
        android:drawableStart="@drawable/ic_action_button"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableRight="@drawable/ic_action_button2"
        android:text="@string/tatlılar"
        android:textColor="@android:color/white"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/pastry1"
        android:layout_width="155dp"
        android:layout_height="81dp"
        android:layout_alignTop="@id/dessert2"
        android:layout_alignEnd="@+id/dessert1"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/hamurisi" />

    <Button
        android:id="@+id/pastry2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pastry1"
        android:layout_alignEnd="@+id/dessert2"
        android:layout_marginTop="75dp"
        android:background="#5E5D5D"
        android:drawableStart="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:text="@string/hamurişi"
        android:textColor="@android:color/white"
        android:typeface="monospace" />


</RelativeLayout>