<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan"
    tools:contexst=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:typeface="monospace"
        android:text="@string/recipes"/>

    <Button
        android:id="@+id/menu"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/menu" />

    <Button
        android:id="@+id/button1"
        android:drawableRight="@drawable/ic_action_button2"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableStart="@drawable/ic_action_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:background="#965E5D5D"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:typeface="monospace"
        android:onClick="buton"
        android:visibility="visible"
        android:text="@string/recipe_button1_name" />

    <Button
        android:id="@+id/button2"
        android:drawableRight="@drawable/ic_action_button2"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableStart="@drawable/ic_action_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:background="#965E5D5D"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:typeface="monospace"
        android:visibility="visible"
        android:text="@string/recipe_button2_name" />

    <Button
        android:id="@+id/button3"
        android:drawableRight="@drawable/ic_action_button2"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableStart="@drawable/ic_action_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:background="#965E5D5D"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:typeface="monospace"
        android:visibility="invisible"
        android:text="@string/recipe_button3_name" />

    <Button
        android:id="@+id/button4"
        android:drawableRight="@drawable/ic_action_button2"
        android:drawableLeft="@drawable/ic_action_button"
        android:drawableEnd="@drawable/ic_action_button2"
        android:drawableStart="@drawable/ic_action_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:background="#965E5D5D"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:typeface="monospace"
        android:visibility="invisible"
        android:text="@string/recipe_button1_name"
        />


</RelativeLayout>